--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     <meta property="twitter:title" content="Portfolio" />
     <meta property="twitter:description" content="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas at, possimus atque culpa a unde. Labore in officiis sequi perferendis molestiae dolores debitis sint." />
     <meta property="twitter:image" content="img/og/og__preview.png" />
-    
+
     <title>Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -208,9 +208,6 @@
                         </div>
                     </div>
                 </div>
-
-
-
             </div>
         </section>
 
@@ -642,19 +639,19 @@
 
                         <form action="#" class="form contact__form">
                             <div class="form__input-name-wrapper">
-                                <input class="form__input-name" id="input-name" name="name" type="text">
+                                <input required class="form__input-name" id="input-name" name="name" type="text">
                                 <label for="input-name">Ваше ім'я</label>
                             </div>
                             <div class="form__input-email-wrapper">
-                                <input class="form__input-email" id="input-email" name="email" type="email">
-                                <label for="input-email">Ваше ім'я</label>
+                                <input required class="form__input-email" id="input-email" name="email" type="email">
+                                <label for="input-email">Ваш email</label>
                             </div>
                             <div class="form__textarea-wrapper">
                                 <textarea class="form__textarea" name="text" id="textarea"></textarea>
-                                <label for="textarea">Ваше ім'я</label>
+                                <label for="textarea">Ваше повідомленя</label>
                             </div>
 
-                            <button class="button">Відправити повідомленя</button>
+                            <button class="button form__button">Відправити повідомленя</button>
                         </form>
                     </div>
                 </div>
